--- a/templates/customer_details.html
+++ b/templates/customer_details.html
@@ -12,7 +12,7 @@
         {{ customer[0]["email"]}} |
        {{customer[0]['address']}}	
     </p>
-  
-    <p>Details of orders for customer:</p>
+  <p>Modify the method to also supply the customer's orders</p>
+    <p>Details of orders for {{customer[0]["name"]}}:</p>
 </body>
 </html>
