--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     
     <h3>You name it, we might sell it</h3>
     <p>Look at the data in the other pages and fix errors as you find them</p>
-    <p><a href={{ url_for('customers') }}>Customers</a> | <a href={{ url_for('orders') }}>Orders</a></p>
+    <p><a href={{ url_for('products') }}>Products</a> | <a href={{ url_for('customers') }}>Customers</a> | <a href={{ url_for('orders') }}>Orders</a></p>
     <p>This is an idea of how you might do the backend of a site. All of the authentication/admin stuff is missing, 
       as are forms for entering orders and customer details. You just see what the orders are, and who ordered what.
     </p>
